back end for users completed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
 	"dependencies": {
+		"apollo-server": "^3.10.2",
+		"bcrypt": "^5.0.1",
+		"dotenv": "^16.0.2",
+		"graphql": "^16.6.0",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.5.4",
 		"nodemon": "^2.0.19"
 	},
@@ -8,6 +13,7 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"scripts": {
+		"seeds": "node src/seeds/index.js",
 		"dev": "nodemon src/index.js",
 		"start": "node src/index.js"
 	},
