--- a/wcr-client/package.json
+++ b/wcr-client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "graphql": "^15.8.0",
     "jwt-decode": "^3.1.2",
     "mesh-gradient.js": "^0.0.5",
