--- a/wcr-server/package.json
+++ b/wcr-server/package.json
@@ -2,6 +2,7 @@
 	"dependencies": {
 		"apollo-server": "^3.10.2",
 		"bcrypt": "^5.0.1",
+		"dateformat": "^5.0.3",
 		"dotenv": "^16.0.2",
 		"graphql": "^16.6.0",
 		"jsonwebtoken": "^8.5.1",
