--- a/wcr-client/package.json
+++ b/wcr-client/package.json
@@ -8,13 +8,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "date-fns": "^2.29.3",
     "graphql": "^15.8.0",
     "jwt-decode": "^3.1.2",
     "mesh-gradient.js": "^0.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
-    "react-moment": "^1.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
