--- a/wcr-client/package.json
+++ b/wcr-client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "date-fns": "^2.29.3",
+    "framer-motion": "^7.3.6",
     "graphql": "^15.8.0",
     "jwt-decode": "^3.1.2",
     "mesh-gradient.js": "^0.0.5",
