--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
 	"description": "",
 	"main": "wcr-server/index.js",
 	"scripts": {
-		"start": "concurrently \"cd wcr-server && npm run dev\" \"cd wcr-client && npm start\"",
-		"develop": "concurrently \"cd wcr-server && npm run dev\" \"cd wcr-client && npm start\"",
+		"start": "node wcr-server/index.js",
+		"start:server": "cd wcr-server && npm run dev",
+		"start:client": "cd wcr-client && npm start",
+		"develop": "npm run start:client && npm run start:server",
 		"install": "cd wcr-server && npm i && cd ../wcr-client && npm i",
 		"build": "cd wcr-client && npm run build"
 	},
