--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
 	"description": "",
 	"main": "wcr-server/index.js",
 	"scripts": {
-		"start": "npm run start:client && npm run start:server",
+		"start": "npm run start:server && npm run start:client",
 		"start:server": "cd wcr-server && npm run dev",
 		"start:client": "cd wcr-client && npm start",
-		"install": "cd wcr-server && npm i && cd ../wcr-client && npm i",
-		"build": "cd wcr-client && npm run build"
+		"install": "cd wcr-server && npm i && cd ../wcr-client && npm i"
 	},
 	"repository": {
 		"type": "git",
