--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
 	"description": "",
 	"main": "wcr-server/index.js",
 	"scripts": {
-		"start": "npm run start:server && npm run start:client",
-		"start:server": "cd wcr-server && npm run dev",
-		"start:client": "cd wcr-client && npm start",
-		"install": "cd wcr-server && npm i && cd ../wcr-client && npm i"
+		"start": "node server/server.js",
+		"start:server": "cd server && npm run watch",
+		"start:client": "cd client && npm start",
+		"develop": "concurrently \"cd wcr-server && npm run dev\" \"cd wcr-client && npm start\"",
+		"install": "cd server && npm i && cd ../client && npm i",
+		"build": "cd client && npm run build"
 	},
 	"repository": {
 		"type": "git",
@@ -19,5 +21,8 @@
 	"bugs": {
 		"url": "https://github.com/awarsame1996/whips-car-rental/issues"
 	},
-	"homepage": "https://github.com/awarsame1996/whips-car-rental#readme"
+	"homepage": "https://github.com/awarsame1996/whips-car-rental#readme",
+	"dependencies": {
+		"concurrently": "^7.4.0"
+	}
 }
