--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
 	"description": "",
 	"main": "wcr-server/index.js",
 	"scripts": {
-		"start": "node server/server.js",
-		"start:server": "cd server && npm run watch",
-		"start:client": "cd client && npm start",
+		"start": "node wcr-server/index.js",
+		"start:server": "cd wcr-server && npm run dev",
+		"start:client": "cd wcr-client && npm start",
 		"develop": "concurrently \"cd wcr-server && npm run dev\" \"cd wcr-client && npm start\"",
-		"install": "cd server && npm i && cd ../client && npm i",
-		"build": "cd client && npm run build"
+		"install": "cd wcr-server && npm i && cd ../wcr-client && npm i",
+		"build": "cd wcr-client && npm run build"
 	},
 	"repository": {
 		"type": "git",
