--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"homepage": "https://github.com/awarsame1996/whips-car-rental#readme",
 	"dependencies": {
+		"apollo-server-express": "^3.10.2",
 		"concurrently": "^7.4.0"
 	}
 }
